--- a/cmd/auction/.env
+++ b/cmd/auction/.env
@@ -1,6 +1,7 @@
 BATCH_INSERT_INTERVAL=20s
 MAX_BATCH_SIZE=4
 AUCTION_INTERVAL=20s
+AUCTION_EXPIRATION_WATCHER_SECONDS=60
 
 MONGO_INITDB_ROOT_USERNAME: admin
 MONGO_INITDB_ROOT_PASSWORD: admin
